--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,25 @@
 <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p>
+<hr>
+<h1>IronStory</h1>
+
+{{#each story}}
+<hr>
+<p>{{this.content}}</p>
+<h4>{{this.writer}}</h4>
+<h6>{{this.date}}</h6>
+{{/each}}
+
+
+
+
+<hr>
+<form action="/add-story" method="post">
+  
+  Write your sentence
+  <input type="text" name="content">
+  <br>
+  Your name
+  <input type="text" name="writer">
+  <button>Add</button>
+</form>
